ubah tampilan succes.html

--- a/success.html
+++ b/success.html
@@ -6,7 +6,7 @@
   <title>Pesan Terkirim</title>
   <style>
     body {
-      background-color: #1a1a2e;
+      background-color: #620133;
       color: white;
       font-family: sans-serif;
       display: flex;
@@ -16,7 +16,7 @@
       margin: 0;
     }
     h1 {
-      color: #00ffcc;
+      color: #f8cfeb;
     }
   </style>
 </head>
