--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">O'chelss<span>.</span></div>
+            <div class="logo">O'chels<span>.</span></div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
