edit tampilan css

--- a/success.html
+++ b/success.html
@@ -15,12 +15,15 @@
       height: 100vh;
       margin: 0;
     }
-    h1 {
+    text {
       color: #f8cfeb;
     }
   </style>
 </head>
 <body>
-  <h1>Pesan Anda telah terkirim!</h1>
+  <div class="text">
+    <h1>Pesan anda telah terkirim!</h1>
+  </div>
+  
 </body>
 </html>
