ubah tampilan succes.html

--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
           <section id="skills" aria-label="Skills section">
             <h2>✧ Skills</h2>
             <div class="skills-list" role="list">
-                <span class="skill" role="listitem">🔥 HTML5</span>
-                <span class="skill" role="listitem">🎨 CSS3</span>
+                <span class="skill" role="listitem">🔥 HTML</span>
+                <span class="skill" role="listitem">🎨 CSS</span>
                 <span class="skill" role="listitem">⚙️ Javascript</span>
                 <span class="skill" role="listitem">🐘 PHP</span>
                 <span class="skill" role="listitem">📱 Responsive Design</span>
                 <span class="skill" role="listitem">🔧 Git & Github</span>
-                <span class="skill" role="listitem">📦 Bootstrap</span>
             </div>
           </section>
 
