--- a/success.html
+++ b/success.html
@@ -6,24 +6,38 @@
   <title>Pesan Terkirim</title>
   <style>
     body {
-      background-color: #620133;
-      color: white;
-      font-family: sans-serif;
+      margin: 0;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      font-family: sans-serif;
+      overflow: hidden;
+
+      background: linear-gradient(-45deg, #120a0e, #7928ca, #2adefa);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
     }
-    text {
-      color: #f8cfeb;
+
+    @keyframes gradientBG {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
+
+    h1 {
+      color: white;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="text">
-    <h1>Pesan anda telah terkirim!</h1>
-  </div>
-  
+  <h1>Pesan anda telah terkirim!</h1>
 </body>
 </html>
