--- a/success.html
+++ b/success.html
@@ -14,7 +14,7 @@
       font-family: sans-serif;
       overflow: hidden;
 
-      background: linear-gradient(-45deg, #120a0e, #7928ca, #2adefa);
+      background: linear-gradient(-45deg, #ff84c2, #c285ff, #75caff);
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
     }
