--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <article class="project-item" tabindex="0">
                     <h3>🧩 About Instagram</h3>
                     <p>
-                        Web statis yan berisi tentang sejarah aplikasi Instagram.
+                        Web statis yang berisi tentang sejarah aplikasi Instagram.
                     </p>
                     <a href="Kelompok-2-Web-Statis/index.html" class="project-link" target="_blank" rel="noopener">Lihat Project</a>
                 </article>
